fix: fixed profile text container overflowing2

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,5 @@
 .profile__name {
+    max-width: 400px;
     margin: 0;
     font-style: normal;
     font-weight: 500;
@@ -8,6 +9,7 @@
 
 @media screen and (max-width:767px) {
     .profile__name {
+        max-width: 260px;
         font-size: 27px;
         line-height: 33px;
         text-align: center;
